--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="bought_items">Bought items</string>
     <string name="items_in_shopping_cart">Items in shopping cart</string>
-    <string name="buy">Buy</string>
+    <string name="add_item">Add item to cart</string>
+    <string name="arrow_left">￩</string>
+    <string name="remove_item">Remove item from cart</string>
 </resources>
