--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,6 @@
     <string name="arrow_left">￩</string>
     <string name="remove_item">Remove item from cart</string>
     <string name="send">send</string>
+    <string name="clear">clear</string>
+    <string name="remove_item2">remove item</string>
 </resources>
